[package]
name = "speech"
version = "0.0.1"
edition2024 = "2024"

[profile.dev]
debug = true

[dependencies]
vosk = "0.2.0"
portaudio = "*"
portaudio-sys2 = "0.1.0"

[build]
rustflags = ["-C", "link-arg=-lvosk", "-C", "link-arg=-L/opt/vosk-api/src/libvosk.so"]

[[bin]]
name = "speech"
path = "speech.rs"
